hack/sample/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    octops.io/multiproxy: "true"
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: test
          servicePort: 80
